Feat(Plants): Se implemento la funcionalidad de insertar plantas, siguiendo el flujo de la arquitectura establecido
